[gd_scene load_steps=93 format=2]

[ext_resource path="res://Sprites/Characters/enemy3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/TeleportingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Weapons/Pistol.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shaders/circular-progress.shader" type="Shader" id=4]
[ext_resource path="res://Sprites/Characters/enemy3animation.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/enemy3animation2.png" type="Texture" id=6]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 180.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 90.0
damping = 93.22
scale = 4.0
scale_random = 1.0
color = Color( 1, 0, 0.839216, 1 )
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 2944, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 3072, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 3200, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 3328, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 3456, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 3584, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 3712, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 3840, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 3968, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 4096, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 4224, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 4352, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 4480, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 4608, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 4736, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 4864, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 4992, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 2944, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 3072, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 3200, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 3328, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 3456, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 3584, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 3712, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 3840, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 3968, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 4096, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 6 )
region = Rect2( 4224, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 6 )
region = Rect2( 4352, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 6 )
region = Rect2( 4480, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 4608, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 4736, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 4864, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=82]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "teleporting",
"speed": 96.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": false,
"name": "spawning",
"speed": 96.0
} ]

[sub_resource type="CircleShape2D" id=83]
radius = 32.1115

[sub_resource type="StyleBoxFlat" id=84]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=85]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=86]
shader = ExtResource( 4 )
shader_param/value = 50.0
shader_param/thickness = 30.0
shader_param/offset = null
shader_param/smoothing = 5.0

[node name="TeleportingEnemy" type="KinematicBody2D" groups=[
"Enemy",
]]
rotation = 1.5708
z_index = -50
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 128
process_material = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( -14.7451, -0.237793 )
rotation = 4.71239
frames = SubResource( 82 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -14.7452, -0.237793 )
shape = SubResource( 83 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -14.7452, -0.237793 )
enabled = true

[node name="Controls" type="Node2D" parent="."]
position = Vector2( -14.7451, -0.237793 )
rotation = -1.5708
z_as_relative = false

[node name="HealthBG" type="Panel" parent="Controls"]
margin_left = -32.0002
margin_top = -47.9999
margin_right = 31.9998
margin_bottom = -39.9999
custom_styles/panel = SubResource( 84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthFG" type="Panel" parent="Controls"]
margin_left = -32.0002
margin_top = -48.0
margin_right = 31.9998
margin_bottom = -40.0
custom_styles/panel = SubResource( 85 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="Panel" parent="Controls"]
visible = false
material = SubResource( 86 )
margin_left = 15.9998
margin_top = -104.0
margin_right = 47.9998
margin_bottom = -72.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" parent="." instance=ExtResource( 3 )]
[connection signal="tree_exiting" from="." to="." method="_on_Enemy_tree_exiting"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
